--- a/style.css
+++ b/style.css
@@ -27,3 +27,56 @@ body {
     font-size: 18px;
     color: #E5E7EB
 }
+
+.first-section {
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 48px;
+    padding-left:300px;
+    padding-right: 300px;
+    padding-bottom: 20px;
+    margin:0;
+}
+
+.first-left {
+    display: flex;
+    width: 500px;
+    flex: 0 1 auto;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.first-right {
+    width: 500px;
+    flex: 1 1 auto;
+}
+
+.title {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+
+}
+
+.subtext {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+button {
+    background-color: #3882F6;
+    color: white;
+    border: none;
+    width: 100px;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 10px;
+    
+}
