--- a/style.css
+++ b/style.css
@@ -170,5 +170,12 @@ img {
 
 .sign-up {
     border: 2px solid white;
-
 }    
+
+.footer {
+    text-align: center;
+    padding-top:30px;
+    padding-bottom:30px;
+    background-color: #1f2937;
+    color: white;
+}
